; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_integration.c_isMapped.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_integration.c_isMapped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@False = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @isMapped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @isMapped(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i64, i64* @False, align 8
  store i64 %7, i64* %2, align 8
  br label %21

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @XtIsRealized(i32* %9)
  %11 = load i64, i64* @False, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %8
  %14 = load i64, i64* @False, align 8
  store i64 %14, i64* %2, align 8
  br label %21

15:                                               ; preds = %8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @XtDisplay(i32* %16)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @XtWindow(i32* %18)
  %20 = call i64 @isWindowMapped(i32 %17, i32 %19)
  store i64 %20, i64* %2, align 8
  br label %21

21:                                               ; preds = %15, %13, %6
  %22 = load i64, i64* %2, align 8
  ret i64 %22
}

declare dso_local i64 @XtIsRealized(i32*) #1

declare dso_local i64 @isWindowMapped(i32, i32) #1

declare dso_local i32 @XtDisplay(i32*) #1

declare dso_local i32 @XtWindow(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
